fix: devops and feat: file deletion
